--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,29 @@
 {
   "compilerOptions": {
-    // --- Layout ---
-    "rootDir": ".",
+    // Layout
+    "rootDir": "src",
     "outDir": "dist",
 
-    // --- Módulos/Runtime ---
-    "module": "ESNext",
+    // Runtime
+    "module": "CommonJS",
     "target": "ES2022",
-    "moduleResolution": "Node16",
-    "moduleDetection": "force",
+    "moduleResolution": "Node",
     "lib": ["ES2023"],
     "types": ["node"],
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
 
-    // --- Emisión/Mapas ---
+    // Emisión
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
 
-    // --- Checks estrictos ---
+    // Checks
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
 
-    // --- Estilo/Compat ---
-    "verbatimModuleSyntax": true,
-    "isolatedModules": true,
-    "noUncheckedSideEffectImports": true,
+    // Otros
     "skipLibCheck": true
-
-    // "jsx": "react-jsx"  // déjalo si realmente usas React en este repo
   },
-  "include": ["src", "api", "scripts"],
-  "exclude": ["node_modules"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "api", "scripts"]
 }
